@@ -54,6 +54,8 @@ function shouldCaptureBody (agent) {
 function getFaasData (context, faasId, isColdStart, triggerType, requestId) {
   const faasData = {
     id: faasId,
+    name: context.functionName,
+    version: context.functionVersion,
     coldstart: isColdStart,
     execution: context.awsRequestId,
     trigger: {
